TEST_PROGRAMS/INVALID/08/badShortDeclNumberOfIds.go
package main;

func main() {
  i, j, k := 1.0, 2.0;
}
